<resources>
    <string name="app_name">BKrypto</string>
    <string name="ok">1</string>
    <string name="cancel">0</string>
    <string name="about_text">This app help you learn some ciphers and also solve cryptograms for practicing!</string>
    <string name="title_activity_tutorial">tutorial</string>
    <string name="tut_tab_1">Introduction</string>
    <string name="tut_tab_2">How to solve</string>
    <string name="tut_tab_3">   Example  </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Vigenere">Vigenere</string>
    <string name="Caesar">Caesar</string>
    <string name="Playfair">Playfair</string>
    <string name="Plaintext">Plaintext</string>
    <string name="PlaintextOnly">Plaintext English Letters; Numbers Only</string>
    <string name="KeyOnly">Key English Letters; Numbers Only</string>
    <string name="DecryptedText">Decrypted Text</string>
    <string name="EncryptedText">Encrypted Text</string>
    <string name="Key">Key</string>
    <string name="Encrypt">Encrypt</string>
    <string name="Decrypt">Decrypt</string>
    <string name="Show">Show</string>
    <string name="Hide">Hide</string>
    <string name="Result">Result</string>
    <string name="AX">A = X</string>
    <string name="WeekHistory">Week History</string>
    <string name="DayHistory">Day History</string>
    <string name="About">About Us</string>
    <string name="Feedback">Feedback</string>
    <string name="Version">Version 1.0</string>
    <string name="Tutorial">Tutorial</string>
    <string name="Solve">Solve</string>
    <string name="title_activity_main__history">Main_Activity_history</string>
    <string name="title_activity_history">History</string>
    <string name="tab_text_1">Introduction</string>
    <string name="tab_text_2">How to solve</string>
    <string name="tab_text_3">Example</string>
</resources>
