<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".in_decrypt"
    android:orientation="vertical"
    android:background="@drawable/bg">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Decrypt"
        android:layout_marginTop="50dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textSize="90sp"
        android:fontFamily="@font/harryp"
        android:textColor="#ffe0bb"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/caesar"
        android:layout_width="200dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:fontFamily="@font/fs_aserif"
        android:text="@string/Caesar"
        android:textColor="#ffe0bb"
        android:textSize="35sp" />

    <Button
        android:id="@+id/playfair"
        android:layout_width="200dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_margin="80dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:fontFamily="@font/fs_aserif"
        android:text="@string/Playfair"
        android:textColor="#ffe0bb"
        android:textSize="35sp"
        />

    <Button
        android:id="@+id/vigenere"
        android:layout_width="200dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:fontFamily="@font/fs_aserif"
        android:text="@string/Vigenere"
        android:textColor="#ffe0bb"
        android:textSize="35sp"
        />

</LinearLayout>