<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".About">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:layout_marginTop="50dp"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textSize="90sp"
        android:fontFamily="@font/harryp"
        android:textColor="#ffe0bb"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/about_software"
        android:layout_width="300dp"
        android:layout_height="159dp"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:layout_weight="1"
        android:color="#4e1301"
        android:fontFamily="@font/fs_habara"
        android:text="@string/about_text"
        android:textAlignment="center"
        android:textSize="30sp" />



    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:layout_margin="40dp"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:fontFamily="@font/fs_aserif"
        android:text="@string/Feedback"
        android:id="@+id/feedback"
        android:layout_gravity="center"
        android:background="@drawable/button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="64dp"
        android:color="#4e1301"
        android:textSize="22sp"
        android:text="@string/Version"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"/>

</LinearLayout>