<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vigenere"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.manhl_000.bkrypto.Cipher.VigenereCipher">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/Vigenere"
        android:textSize="90sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/Vigenere"
        android:textColor="#ffe0bb"
        android:textSize="90sp" />

    <EditText
        android:id="@+id/plaintext"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/Plaintext"
        android:inputType="textMultiLine|textCapCharacters"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/ciphertext"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="196dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/Plaintext"
        android:inputType="textCapCharacters|textMultiLine"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <TextView
        android:id="@+id/decryptedText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:fontFamily="@font/fs_sicula"
        android:gravity="center"
        android:text="@string/DecryptedText"
        android:textIsSelectable="true"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/keytext"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_below="@+id/plaintext"
        android:layout_centerHorizontal="true"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/Key"
        android:inputType="textCapCharacters"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <Button
        android:id="@+id/encrypt"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keytext"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:fontFamily="@font/fs_aserif"
        android:text="@string/Encrypt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/keytext2"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_below="@+id/ciphertext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-196dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/Key"
        android:inputType="textCapCharacters"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <Button
        android:id="@+id/decrypt"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keytext2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:fontFamily="@font/fs_aserif"
        android:text="@string/Decrypt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/encryptedText"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/encrypt"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fs_sicula"
        android:gravity="center"
        android:text="@string/EncryptedText"
        android:textIsSelectable="true"
        android:textSize="25sp" />
</RelativeLayout>
